* [2020-10-19 Mon]
** Added
   - When a header is focused, and the user uses the 'search' or 'task list' feature, then the searched header list is automatically narrowed to only subheaders of the originally focused header.
     - Thank you [[https://github.com/tarnung][tarnung]] for your [[https://github.com/200ok-ch/organice/pull/517][PR]] 🙏

* [2020-10-10 Sat]
** Added
   - Display time summaries for clock entries in each subtree
     - Thank you [[https://github.com/tarnung][tarnung]] for your [[https://github.com/200ok-ch/organice/pull/497][PR]] 🙏

** Changed

   - Improve header stickiness
     - The header bar was not always sticky for longer documents and the therefore some functionality was hard to reach (the user had to scroll to the top to reach it).
     - Thank you [[https://github.com/tarnung][tarnung]] for your [[https://github.com/200ok-ch/organice/pull/499][PR]] 🙏

* [2020-10-07 Wed]
** Added

   - Added Documentation on [[https://orgmode.org/manual/Repeated-tasks.html][repeaters]] and [[https://orgmode.org/manual/Deadlines-and-scheduling.html#Deadlines-and-scheduling][delays]] to =sample.org= and to mouseovers for the relevant buttons.

* [2020-09-20 Sun]
** Added

   - Recognize US and Swiss phone numbers and make them clickable
   - Next to 'canonical' phone numbers like +49123456789, also recognize:
     - US phone numbers:
       - 123-456-7890
       - (123) 456-7890
       - 123 456 7890
       - 123.456.7890
       - +91 (123) 456-7890
     - Swiss phone numbers:
       - 0783268674
       - 078 326 86 74
       - 041783268675
       - 0041783268674
       - +41783268676
       - +41783268677

* [2020-09-07 Mon]
** Added
   - Added the capability to chose the start screen when installing organice to the homescreen.
     - More information on how to install organice like this, see https://organice.200ok.ch/documentation.html#installation
* [2020-09-05 Sat]

** Fixed